--- a/DateKaro-main/pubspec.yaml
+++ b/DateKaro-main/pubspec.yaml
@@ -29,7 +29,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   bloc: ^7.0.0
   flutter_bloc: ^7.0.0
-  hydrated: ^2.1.0
+  hydrated_bloc: ^7.0.0
   velocity_x: ^3.2.0
   get_it: ^7.1.3
 
@@ -47,7 +47,6 @@ dependencies:
   firebase_image: ^1.0.1
   swipe_cards: ^0.1.0
   syncfusion_flutter_sliders: ^19.2.51
-  flutter_chips_input: ^1.9.0-dev.1
 
 dev_dependencies:
   flutter_test:
